manifest/echoweb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoweb
  labels:
    app: echoweb
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoweb
      version: v1
  template:
    metadata:
      labels:
        app: echoweb
        version: v1
    spec:
      containers:
        - name: web
          image: echo-web:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
---
kind: Service
apiVersion: v1
metadata:
  name: echoweb
  labels:
    app: echoweb
spec:
  selector:
    app: echoweb
  ports:
    - port: 5000
      name: http
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echoweb
spec:
  hosts:
    - '*'
  gateways:
    - gateway
  http:
    - route:
      - destination:
          host: echoweb.default.svc.cluster.local
          port:
            number: 5000
